--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "module": "es2020",
     "lib": ["es2020", "dom"],
     "resolveJsonModule": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "types": ["node"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
